syntax = "proto3";

package consignment;

// 服务
service ShippingService {
    // 创建委托
    rpc CreateConsignment(Consignment) returns (Response) {}

    // 获取委托
    rpc GetConsignments(GetRequest) returns (Response) {}
}

// 委托信息
message Consignment {
  string id = 1;
  string description = 2;
  int32 weight = 3;
  repeated Container containers = 4;
  string vessel_id = 5;
}

// 容器
message Container {
  string id = 1;
  string customer_id = 2;
  string origin = 3;
  string user_id = 4;
}

// 创建一个空白的获取请求
message GetRequest{}

// 响应对象
message Response {
  bool created = 1;
  Consignment consignment = 2;

  repeated Consignment consignments = 3;
}